# liteXverify

./: README.md  cleanup.py  pyproject.toml  tox.ini
.opencode/: config.json
.opencode/rules/: architecture.md  project-conventions.md  testing.md
.opencode/skills/: debugging.md  run-verification.md  soc-initialization.md  verification-setup.md
Docs/: user_manual.md
data/scripts/questa/: compile.do.j2  run.do.j2
data/scripts/vcs/: compile.sh.j2  coverage.sh.j2  run.sh.j2
data/scripts/verilator/: Makefile.j2
data/scripts/vivado/: synth.tcl.j2
data/templates/cocotb/: bfm.py.j2  test_module.py.j2
data/templates/uvm/: agent.sv.j2  agent_config.sv.j2  agent_pkg.sv.j2  driver.sv.j2  env.sv.j2  interface.sv.j2  monitor.sv.j2  seq_item.sv.j2  sequence_base.sv.j2  sequencer.sv.j2  test_base.sv.j2
src/litex_verify/: __init__.py  __main__.py  server.py
src/litex_verify/core/: config.py  context.py  exceptions.py  logging.py  state.py
src/litex_verify/generators/: __init__.py
src/litex_verify/models/: __init__.py  coverage.py  project.py  simulation.py  soc_config.py
src/litex_verify/prompts/: workflows.py
src/litex_verify/resources/: __init__.py  project.py  scripts.py  templates.py
src/litex_verify/services/: __init__.py  coverage_db.py  eda_tools.py  litex_runner.py  log_parser.py  rtl_parser.py  sim_runner.py  testbench_gen.py
src/litex_verify/tools/: __init__.py  (+12 more)
tests/: test_state.py
tests/fixtures/: __init__.py
tests/integration/: test_mcp_protocol.py  test_tool_detection.py  test_workflow_e2e.py
tests/unit/: conftest.py  test_models.py
(+31 files in other folders)
