[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litex-verify"
version = "0.1.0"
description = "AI-assisted LiteX SoC verification platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiofiles>=23.0.0",
    "jinja2>=3.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
]

[project.scripts]
litex-verify = "litex_verify.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litex_verify"]
